[gd_scene load_steps=13 format=1]

[ext_resource path="res://sprites/plant0.png" type="Texture" id=1]
[ext_resource path="res://sprites/plant1.png" type="Texture" id=2]
[ext_resource path="res://sprites/plant2.png" type="Texture" id=3]
[ext_resource path="res://sprites/plant3.png" type="Texture" id=4]
[ext_resource path="res://sprites/plant4.png" type="Texture" id=5]
[ext_resource path="res://scripts/plant.gd" type="Script" id=6]
[ext_resource path="res://fonts/pixel_font.fnt" type="BitmapFont" id=7]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource/name = "level_up_1"
length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 1, 2, 1, 2, 1, 2, 1, 2 ]
}

[sub_resource type="Animation" id=3]

resource/name = "level_up_2"
length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3, 2, 3, 2, 3, 2, 3 ]
}

[sub_resource type="Animation" id=4]

resource/name = "level_up_max"
length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 4, 3, 4, 3, 4, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="plant" type="AnimatedSprite"]

transform/pos = Vector2( 32.1746, 31.7773 )
frames = SubResource( 1 )
animation = "default"
frame = 4
centered = false
script/script = ExtResource( 6 )

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/level_up_1 = SubResource( 2 )
anims/level_up_2 = SubResource( 3 )
anims/level_up_max = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="immunity_particles" type="Particles2D" parent="."]

transform/pos = Vector2( 8.85704, 12.4444 )
transform/scale = Vector2( 0.906205, 0.935961 )
config/amount = 4
config/lifetime = 1.0
config/process_mode = 1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 10.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 2.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/radial_accel = 1.0
randomness/tangential_accel = 1.0
randomness/initial_size = 1.0
randomness/hue_variation = 1.0
color/color = Color( 0.9375, 0.670166, 0.927057, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="immunity_particles1" type="Particles2D" parent="."]

transform/pos = Vector2( 13.2366, 12.4378 )
transform/scale = Vector2( 0.906205, 0.935961 )
config/amount = 4
config/lifetime = 1.0
config/process_mode = 1
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 10.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 2.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/radial_accel = 1.0
randomness/tangential_accel = 1.0
randomness/initial_size = 1.0
randomness/hue_variation = 1.0
color/color = Color( 0.9375, 0.670166, 0.927057, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="plant_water" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 35.0
margin/right = 22.0
margin/bottom = 44.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.55365, 0.744519, 0.753906, 1 )
text = "100"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="plant_area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 0.416729, 0, 0, 1.76569, 11.7946, 11.6842 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="plant_shape" type="CollisionShape2D" parent="plant_area"]

transform/pos = Vector2( 11.7946, 11.6842 )
transform/scale = Vector2( 0.416729, 1.76569 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0


